<resources>
    <string name="app_name">Empresas</string>
    <string name="title_login">ioasys</string>
    <string name="search">Pesquisar</string>
    <string name="welcome_login">BEM-VINDO AO EMPRESAS</string>
    <string name="description_login">Lorem ipsum dolor sit amet, contetur adipiscing elit. Nunc accumsan.</string>
    <string name="edt_email_login">E-mail</string>
    <string name="edt_password_login">Senha</string>
    <string name="btn_name_login">ENTRAR</string>
    <string name="logo_app_description">Logo do aplicativo</string>
    <string name="enterprise_image_description">Imagem da empresa</string>
    <string name="title_listing_screen">ioasys</string>
    <string name="error_msg_invalid_email">Email Inválido</string>
    <string name="error_msg_empty_field">Campo Vazio</string>
    <string name="error_msg_password_has_not_number">Senha não possui número</string>
    <string name="error_msg_password_has_not_uppercase">Senha não possui letra maiúscula</string>
    <string name="error_msg_password_has_not_lowercase">Senha não possui minúscula</string>
    <string name="error_msg_password_has_not_especial_character">Senha não possui caractere especial</string>
    <string name="error_msg_password_has_not_minimum_size">Senha deve possuir no mínimo 6 dígitos</string>

    <string name="error_email_or_password_invalid">Email ou senha inválidos</string>

    <string name="login_key">LoginKey</string>
    <string name="message_verify_connection">Verifique sua conexão com a internet</string>
    <string name="connection_error">Erro na conexão</string>
    <string name="unknown_error">Erro desconhecido</string>
    <string name="error_login_expired">Login expirado</string>
    <string name="message_login_again">Faça o login novamente</string>
    <string name="message_fetch_data_not_possible">Não foi possível buscar os dados</string>
    <string name="ok">OK</string>
    <string name="empty_enterprise_list">Lista de empresas vazia</string>
</resources>
