<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/loginLogoImageView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="88dp"
        android:src="@mipmap/logo_home"
        android:contentDescription="@string/logo_app_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/itemEnterpriseTitleTextView"
        android:id="@+id/loginWelcomeTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/welcome_login"
        app:layout_constraintEnd_toEndOf="@+id/loginLogoImageView"
        app:layout_constraintStart_toStartOf="@+id/loginLogoImageView"
        app:layout_constraintTop_toBottomOf="@+id/loginLogoImageView" />

    <TextView
        style="@style/description_text"
        android:id="@+id/loginDescriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="42dp"
        android:layout_marginEnd="42dp"
        android:text="@string/description_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginWelcomeTextView" />

    <EditText
        style="@style/edt_txt"
        android:id="@+id/loginEmailEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="45dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email"
        android:hint="@string/edt_email_login"
        android:autofillHints="@string/edt_email_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginDescriptionTextView"
        tools:targetApi="o" />

    <TextView
        style="@style/txt_invalid_input"
        android:id="@+id/txtErrorInvalidEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginEmailEditText"
        app:layout_constraintStart_toStartOf="@id/loginEmailEditText"
        app:layout_constraintEnd_toEndOf="@id/loginEmailEditText"
        app:layout_constraintBottom_toTopOf="@id/loginPasswordEditText"
        app:layout_constraintHorizontal_bias="0"/>

    <EditText
        style="@style/edt_txt"
        android:id="@+id/loginPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_cadeado"
        android:text="12341234"
        android:hint="@string/edt_password_login"
        android:autofillHints="@string/edt_password_login"
        app:layout_constraintEnd_toEndOf="@+id/loginEmailEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginEmailEditText"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailEditText"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/txtErrorEmailOrPassword"
        style="@style/txt_invalid_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/loginPasswordEditText"
        app:layout_constraintStart_toStartOf="@id/loginPasswordEditText"
        app:layout_constraintEnd_toEndOf="@id/loginPasswordEditText"
        app:layout_constraintBottom_toTopOf="@id/loginEnterButton"
        app:layout_constraintHorizontal_bias="0"
        tools:text="error aqui"
        android:layout_marginBottom="16dp"/>

    <Button
        style="@style/btnLogin"
        android:id="@+id/loginEnterButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/btn_name_login"
        app:layout_constraintEnd_toEndOf="@+id/loginPasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/loginPasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordEditText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
